# rust-microservices

./: .gitignore
async/futures-sample/: Cargo.toml
async/futures-sample/src/: main.rs
async/image-service/: Cargo.toml
async/image-service/src/: main.rs
chapter2/hyper-microservice-rest/: Cargo.toml
chapter2/hyper-microservice-rest-regex/: Cargo.toml
chapter2/hyper-microservice-rest-regex/src/: main.rs
chapter2/hyper-microservice-rest/src/: main.rs
chapter2/hyper-microservice-with-handlers/: Cargo.toml
chapter3/random-service-with-args/: Cargo.toml
chapter3/random-service-with-config/: Cargo.toml
chapter3/random-service-with-env/: Cargo.toml
chapter4/random-service-with-shuffle/: Cargo.toml
chat/: Cargo.toml
chat/migrations/2019-12-31-121138_create_users/: up.sql
chat/migrations/2019-12-31-121143_create_channels/: up.sql
chat/migrations/2019-12-31-121147_create_memberships/: up.sql
chat/migrations/2019-12-31-121150_create_messages/: up.sql
chat/src/: lib.rs  models.rs  schema.rs
database/mongodb/: Cargo.toml  docker-compose.yml
database/mongodb/src/: main.rs
database/mysql/: Cargo.toml  docker-compose.yml
database/postgres/: Cargo.toml
database/postgres-db-pool/: Cargo.toml
database/postgres-db-pool/src/: main.rs
database/redis/: Cargo.toml  docker-compose.yml
grpc-jsonrpc/grpc-ring/: Cargo.toml  ring.proto
grpc-jsonrpc/jsonrpc-ring/: Cargo.toml
logging-configuration/random-service-with-logging/: Cargo.toml
orm/diesel/: Cargo.toml  migrate.sh
rouille-svc/: Cargo.toml
serialization/random-service-with-multiple-formats/: Cargo.toml
web/actix-web-svc/: Cargo.toml
web/nickel-svc/: Cargo.toml  docker-compose.yml
web/nickel-svc/src/: main.rs
web/nickel-svc/templates/: confirm.tpl
(+26 files in other folders)
