[package]
name = "postgres-db-pool"
version = "0.1.0"
authors = ["Carlos <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
postgres = "0.15"
csv = "1.0"
failure = "0.1"
r2d2 = "0.8"
r2d2_postgres = "0.14"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"