[package]
name = "nickel-svc"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
lettre = "0.9.2"
lettre_email =  "0.9.2"
nickel = "0.10"